feat: hero section and sticky header

--- a/index.html
+++ b/index.html
@@ -44,5 +44,28 @@
   </head>
   <body>
     <main-header></main-header>
+
+    <main class="home-main">
+      <section class="home__hero-container">
+        <div class="home__hero container">
+          <div class="hero__heading-wrapper">
+            <span>Guia Turístico</span>
+            <h1 class="hero__heading">O caminho das pedras</h1>
+            <app-button>
+              <i class="ph-fill ph-play"></i>
+              Iniciar
+            </app-button>
+          </div>
+
+          <div class="hero__image-wrapper">
+            <img
+              src="./assets/mapa-paraiba.png"
+              alt="Mapa da Paraíba com destaque para a cidade de Queimadas"
+              width="959"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
