pagina de restaurantes e pousada criada + ajustes dos cards e modal

--- a/restaurantes-e-pousadas.html
+++ b/restaurantes-e-pousadas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>O Que Fazer?</title>
+  <title>Restaurantes e Pousadas</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +31,7 @@
   <script defer src="js/script.js"></script>
 </head>
 
-<body data-json-source="dados/pontos-turisticos.json">
+<body data-json-source="dados/restaurantes-e-pousadas.json">
   <main-header></main-header>
 
   <main class="home-main">
@@ -39,117 +39,94 @@
       <div class="home__hero container">
         <div class="hero__heading-wrapper">
           <span>Queimadas - PB</span>
-          <h1 class="hero__heading">o que fazer?</h1>
+          <h1 class="hero__heading">Restaurantes e Pousadas</h1>
         </div>
       </div>
 
       <!-- Cards -->
       <div class="cards">
 
-        <!-- Card 1 (Pedra do Touro) -->
+        <!-- Card 1 (Pousada Nossa Senhora da Guia ) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-do-touro">
-                <img src="assets/pontos-turisticos/pedra-do-touro.jpg" class="card-img-top" alt="Pedra do Touro">
+            <a href="#" class="card-link-wrapper" data-key="pousada-nossa-senhora-da-guia">
+                <img src="assets/restaurantes-e-pousadas/pousada-nossa-senhora-da-guia-1.jpg" class="card-img-top" alt="pousada-nossa-senhora-da-guia">
                 <div class="card-body">
-                    <h3 class="card-title">Pedra do Touro</h3>
+                    <h3 class="card-title">Pousada Nossa Senhora da Guia</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 2 (Serra do Bodopitá) -->
+        <!-- Card 2 (Recanto das Pedras) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="serra-do-bodopita">
-                <img src="assets/pontos-turisticos/serra-do-bodopita.jpg" class="card-img-top" alt="serra-do-bodopita">
+            <a href="#" class="card-link-wrapper" data-key="recanto-das-pedras">
+                <img src="assets/restaurantes-e-pousadas/recanto-das-pedras-1.png"" class="card-img-top" alt="recanto-das-pedras">
                 <div class="card-body">
-                    <h3 class="card-title">Serra do Bodopitá</h3>
+                    <h3 class="card-title">Restaurante Recanto das Pedras</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 3 (Pedra da Caveira) -->
+        <!-- Card 3 (Pousada e Restaurante Da Paz) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-da-caveira">
-                <img src="assets/pontos-turisticos/pedra-da-caveira.jpg" class="card-img-top" alt="pedra-da-caveira">
+            <a href="#" class="card-link-wrapper" data-key="pousada-e-restaurante-da-paz">
+                <img src="assets/restaurantes-e-pousadas/pousada-e-restaurante-da-paz-2.png"" class="card-img-top" alt="pousada-e-restaurante-da-paz">
                 <div class="card-body">
-                    <h3 class="card-title">Pedra da Caveira</h3>
+                    <h3 class="card-title">Pousada e Restaurante Da Paz</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 4 (>Pedra do Cachorro) -->
+        <!-- Card 4 (Tapioca do Irmão Jairo) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-do-cachorro">
-                <img src="assets/pontos-turisticos/pedra-do-cachorro.jpg" class="card-img-top" alt="pedra-do-cachorro">
+            <a href="#" class="card-link-wrapper" data-key="tapioca-do-irmao-jairo">
+                <img src="assets/restaurantes-e-pousadas/tapioca-do-irmao-jairo-1.jpg" class="card-img-top" alt="tapioca-do-irmao-jairo">
                 <div class="card-body">
-                    <h3 class="card-title">Pedra do Cachorro</h3>
+                    <h3 class="card-title">Tapioca do Irmão Jairo</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 5 (Mercado Público de Queimadas) -->
+        <!-- Card 5 (Rekints Restaurante E Churrascaria) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="mercado-publico">
-                <img src="assets/pontos-turisticos/mercado-publico-de-queimadas.jpg" class="card-img-top" alt="mercado-publico-de-queimadas">
+            <a href="#" class="card-link-wrapper" data-key="rekints-restaurante-e-churrascaria">
+                <img src="assets/restaurantes-e-pousadas/rekints-restaurante-e-churrascaria.png" class="card-img-top" alt="rekints-restaurante-e-churrascaria">
                 <div class="card-body">
-                    <h3 class="card-title">Mercado Público de Queimadas</h3>
+                    <h3 class="card-title">Rekints Restaurante E Churrascaria</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 6 (Paróquia Nossa Senhora da Guia) -->
+        <!-- Card 6 (Sushi-Lom) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="paroquia-nossa-senhora-da-guia">
-                <img src="assets/pontos-turisticos/paroquia-nossa-senhora-da-guia.jpg" class="card-img-top" alt="paroquia-nossa-senhora-da-guia">
+            <a href="#" class="card-link-wrapper" data-key="sushi-lom">
+                <img src="assets/restaurantes-e-pousadas/sushi-lom.jpg" class="card-img-top" alt="Sushi-Lom">
                 <div class="card-body">
-                    <h3 class="card-title">Paróquia Nossa Senhora da Guia</h3>
+                    <h3 class="card-title">Sushi-Lom</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
 
-        <!-- Card 7 (Pedra dos Três Reis Magos) -->
+        <!-- Card 7 (Restaurante Sabor Nordestino) -->
         <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-dos-tres-reis-magos">
-                <img src="assets/pontos-turisticos/pedra-dos-tres-reis-magos.jpg" class="card-img-top" alt="pedra-dos-tres-reis-magos">
+            <a href="#" class="card-link-wrapper" data-key="restaurante-sabor-nordestino">
+                <img src="assets/restaurantes-e-pousadas/restaurante-sabor-nordestino.jpg" class="card-img-top" alt="restaurante-sabor-nordestino">
                 <div class="card-body">
-                    <h3 class="card-title">Pedra dos Três Reis Magos</h3>
+                    <h3 class="card-title">Restaurante Sabor Nordestino</h3>
                     <p class="card-text">Clique para saber mais!</p>
                 </div>
             </a>
         </div>
-
-        <!-- Card 8 (Pedra do Bico) -->
-        <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-do-bico">
-                <img src="assets/pontos-turisticos/pedra-do-bico.jpg" class="card-img-top" alt="pedra-do-bico">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra do Bico</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
-            </a>
-        </div>
-
-        <!-- Card 9 (Centro Cultural Philus-Haus) -->
-        <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="centro-cultural-philus-haus">
-                <img src="assets/pontos-turisticos/centro-cultural-philus-haus.jpg" class="card-img-top" alt="centro-cultural-philus-haus">
-                <div class="card-body">
-                    <h3 class="card-title">Centro Cultural Philus-Haus</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
-            </a>
-        </div>
-
       </div>
     </section>
   </main>
 
-  <!-- Modal -->  
+    <!-- Modal -->  
   <div id="modal-overlay" class="modal-overlay">
 
     <!-- Conteúdo do Modal -->
@@ -170,7 +147,7 @@
     <button id="modal-close" class="modal-close">&times;</button>
 
   </div>
-  
+
 </body>
 
 </html>
