feat: adiciona página do quiz

--- a/o-que-fazer.html
+++ b/o-que-fazer.html
@@ -170,7 +170,7 @@
     <button id="modal-close" class="modal-close">&times;</button>
 
   </div>
-  
+  <main-footer></main-footer>
 </body>
 
 </html>
