--- a/restaurantes-e-pousadas.html
+++ b/restaurantes-e-pousadas.html
@@ -147,7 +147,7 @@
     <button id="modal-close" class="modal-close">&times;</button>
 
   </div>
-
+  <main-footer></main-footer>
 </body>
 
 </html>
