feat: adiciona o jogo 'Quiz das Pedras'

--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turismo de Queimadas-PB</title>
+    <title>Quiz das pedras</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -51,6 +51,19 @@
           <div class="hero__heading-wrapper">
             <span>Guia Turístico</span>
             <h1 class="hero__heading">O quiz das pedras</h1>
+          </div>
+        </div>
+        <div class="game">
+          <h1>Quiz das pedras</h1>
+          <div class="quiz">
+            <h2 id="questao">A pergunta vai aqui</h2>
+            <div id="resposta-buttons">
+              <button class="btn">Resposta 1</button>
+              <button class="btn">Resposta 2</button>
+              <button class="btn">Resposta 3</button>
+              <button class="btn">Resposta 4</button>
+            </div>
+            <button id="proximo-btn">Próxima</button>
           </div>
         </div>
       </section>
