feat: adiciona função que mostra o resultado e o gabarito de cada questão no quiz

--- a/quiz.html
+++ b/quiz.html
@@ -63,6 +63,8 @@
               <button class="btn">Resposta 3</button>
               <button class="btn">Resposta 4</button>
             </div>
+            <h2 id="resultado-questao"> o resultado da questão vai aqui</h2>
+            <h2 id="gabarito">O gabarito vai aqui</h2>
             <button id="proximo-btn">Próxima</button>
           </div>
         </div>
