feat: adiciona página de apresentação do jogo e melhorias de css

--- a/quiz.html
+++ b/quiz.html
@@ -47,11 +47,26 @@
 
     <main class="home-main">
       <section class="home__hero-container">
-        <div class="home__hero container">
-          <div class="hero__heading-wrapper">
-            <span>Guia Turístico</span>
-            <h1 class="hero__heading">O quiz das pedras</h1>
+        <div class="game-intro">
+          <div class="intro-content">
+            <div class="intro-image">
+              <img src="assets/Pedrinho.png" alt="Pedrinho">
+            </div>
+            <div class="intro-text">
+              <h2 class="intro-title">Quiz das pedras</h2>
+              <p class="intro-description">
+                Oi! Eu sou o Pedrindo, o mascote oficial da nossa aventura turística por Queimadas-PB!
+                Prepare-se, porque eu vou te levar para descobrir curiosidades incríveis, histórias fascinantes e os pontos mais especiais da nossa querida cidade.
+                Aqui no nosso guia turistico,você vai explorar Queimadas de um jeito moderno, leve e divertido! E para começar essa jornada, que tal testar o quanto você já sabe sobre a cidade?
+              </p>
+              <p class="intro-description">
+                O jogo funciona assim: você terá 10 perguntas, cada uma valendo 10 pontos,
+                Mostre seu conhecimento, divirta-se e descubra coisas novas pelo caminho!
+                Quando estiver pronto para começar essa aventura comigo, é só clicar no botão “Jogar”! Vamos lá? 😄🔥
+              </p>
+            </div>
           </div>
+          <button class="intro-button" onclick="comecarQuiz()">Jogar</button>
         </div>
         <div class="game">
           <h1>Quiz das pedras</h1>
