fix: apply container to cards wrapper

--- a/o-que-fazer.html
+++ b/o-que-fazer.html
@@ -1,176 +1,236 @@
 <!doctype html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>O Que Fazer?</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>O Que Fazer?</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&display=swap"
-    rel="stylesheet" />
+    <!-- Phosphor Icons -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/fill/style.css"
+    />
 
-  <!-- Phosphor Icons -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/regular/style.css" />
-  <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/fill/style.css" />
+    <!-- Styles CSS -->
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.1/cdn/themes/light.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
 
-  <!-- Styles CSS -->
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.1/cdn/themes/light.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+    <!-- Scripts JS -->
+    <script
+      type="module"
+      defer
+      src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.1/cdn/shoelace-autoloader.js"
+    ></script>
+    <script defer src="js/web-components.js"></script>
+    <script defer src="js/script.js"></script>
+  </head>
 
-  <!-- Scripts JS -->
-  <script type="module" defer
-    src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.20.1/cdn/shoelace-autoloader.js"></script>
-  <script defer src="js/web-components.js"></script>
-  <script defer src="js/script.js"></script>
-</head>
+  <body data-json-source="dados/pontos-turisticos.json">
+    <main-header></main-header>
 
-<body data-json-source="dados/pontos-turisticos.json">
-  <main-header></main-header>
-
-  <main class="home-main">
-    <section class="home__hero-container">
-      <div class="home__hero container">
-        <div class="hero__heading-wrapper">
-          <span>Queimadas - PB</span>
-          <h1 class="hero__heading">o que fazer?</h1>
+    <main class="home-main">
+      <section class="home__hero-container">
+        <div class="home__hero container">
+          <div class="hero__heading-wrapper">
+            <span>Queimadas - PB</span>
+            <h1 class="hero__heading">o que fazer?</h1>
+          </div>
         </div>
-      </div>
 
-      <!-- Cards -->
-      <div class="cards">
-
-        <!-- Card 1 (Pedra do Touro) -->
-        <div class="card" style="width: 18rem;">
+        <!-- Cards -->
+        <div class="cards container">
+          <!-- Card 1 (Pedra do Touro) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="pedra-do-touro">
-                <img src="assets/pontos-turisticos/pedra-do-touro.jpg" class="card-img-top" alt="Pedra do Touro">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra do Touro</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/pedra-do-touro.jpg"
+                class="card-img-top"
+                alt="Pedra do Touro"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Pedra do Touro</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 2 (Serra do Bodopitá) -->
-        <div class="card" style="width: 18rem;">
+          <!-- Card 2 (Serra do Bodopitá) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="serra-do-bodopita">
-                <img src="assets/pontos-turisticos/serra-do-bodopita.jpg" class="card-img-top" alt="serra-do-bodopita">
-                <div class="card-body">
-                    <h3 class="card-title">Serra do Bodopitá</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/serra-do-bodopita.jpg"
+                class="card-img-top"
+                alt="serra-do-bodopita"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Serra do Bodopitá</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 3 (Pedra da Caveira) -->
-        <div class="card" style="width: 18rem;">
+          <!-- Card 3 (Pedra da Caveira) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="pedra-da-caveira">
-                <img src="assets/pontos-turisticos/pedra-da-caveira.jpg" class="card-img-top" alt="pedra-da-caveira">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra da Caveira</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/pedra-da-caveira.jpg"
+                class="card-img-top"
+                alt="pedra-da-caveira"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Pedra da Caveira</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 4 (>Pedra do Cachorro) -->
-        <div class="card" style="width: 18rem;">
+          <!-- Card 4 (>Pedra do Cachorro) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="pedra-do-cachorro">
-                <img src="assets/pontos-turisticos/pedra-do-cachorro.jpg" class="card-img-top" alt="pedra-do-cachorro">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra do Cachorro</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/pedra-do-cachorro.jpg"
+                class="card-img-top"
+                alt="pedra-do-cachorro"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Pedra do Cachorro</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 5 (Mercado Público de Queimadas) -->
-        <div class="card" style="width: 18rem;">
+          <!-- Card 5 (Mercado Público de Queimadas) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="mercado-publico">
-                <img src="assets/pontos-turisticos/mercado-publico-de-queimadas.jpg" class="card-img-top" alt="mercado-publico-de-queimadas">
-                <div class="card-body">
-                    <h3 class="card-title">Mercado Público de Queimadas</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/mercado-publico-de-queimadas.jpg"
+                class="card-img-top"
+                alt="mercado-publico-de-queimadas"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Mercado Público de Queimadas</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 6 (Paróquia Nossa Senhora da Guia) -->
-        <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="paroquia-nossa-senhora-da-guia">
-                <img src="assets/pontos-turisticos/paroquia-nossa-senhora-da-guia.jpg" class="card-img-top" alt="paroquia-nossa-senhora-da-guia">
-                <div class="card-body">
-                    <h3 class="card-title">Paróquia Nossa Senhora da Guia</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+          <!-- Card 6 (Paróquia Nossa Senhora da Guia) -->
+          <div class="card">
+            <a
+              href="#"
+              class="card-link-wrapper"
+              data-key="paroquia-nossa-senhora-da-guia"
+            >
+              <img
+                src="assets/pontos-turisticos/paroquia-nossa-senhora-da-guia.jpg"
+                class="card-img-top"
+                alt="paroquia-nossa-senhora-da-guia"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Paróquia Nossa Senhora da Guia</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 7 (Pedra dos Três Reis Magos) -->
-        <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="pedra-dos-tres-reis-magos">
-                <img src="assets/pontos-turisticos/pedra-dos-tres-reis-magos.jpg" class="card-img-top" alt="pedra-dos-tres-reis-magos">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra dos Três Reis Magos</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+          <!-- Card 7 (Pedra dos Três Reis Magos) -->
+          <div class="card">
+            <a
+              href="#"
+              class="card-link-wrapper"
+              data-key="pedra-dos-tres-reis-magos"
+            >
+              <img
+                src="assets/pontos-turisticos/pedra-dos-tres-reis-magos.jpg"
+                class="card-img-top"
+                alt="pedra-dos-tres-reis-magos"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Pedra dos Três Reis Magos</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
-        </div>
+          </div>
 
-        <!-- Card 8 (Pedra do Bico) -->
-        <div class="card" style="width: 18rem;">
+          <!-- Card 8 (Pedra do Bico) -->
+          <div class="card">
             <a href="#" class="card-link-wrapper" data-key="pedra-do-bico">
-                <img src="assets/pontos-turisticos/pedra-do-bico.jpg" class="card-img-top" alt="pedra-do-bico">
-                <div class="card-body">
-                    <h3 class="card-title">Pedra do Bico</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
+              <img
+                src="assets/pontos-turisticos/pedra-do-bico.jpg"
+                class="card-img-top"
+                alt="pedra-do-bico"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Pedra do Bico</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
             </a>
+          </div>
+
+          <!-- Card 9 (Centro Cultural Philus-Haus) -->
+          <div class="card">
+            <a
+              href="#"
+              class="card-link-wrapper"
+              data-key="centro-cultural-philus-haus"
+            >
+              <img
+                src="assets/pontos-turisticos/centro-cultural-philus-haus.jpg"
+                class="card-img-top"
+                alt="centro-cultural-philus-haus"
+              />
+              <div class="card-body">
+                <h3 class="card-title">Centro Cultural Philus-Haus</h3>
+                <p class="card-text">Clique para saber mais!</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- Modal -->
+    <div id="modal-overlay" class="modal-overlay">
+      <!-- Conteúdo do Modal -->
+      <div id="modal-content" class="modal-content">
+        <div class="modal-image-container">
+          <img
+            id="modal-image"
+            src=""
+            alt="Imagem do Ponto Turístico"
+            class="modal-image"
+          />
+
+          <button id="modal-prev" class="modal-arrow prev">&lt;</button>
+          <button id="modal-next" class="modal-arrow next">&gt;</button>
         </div>
 
-        <!-- Card 9 (Centro Cultural Philus-Haus) -->
-        <div class="card" style="width: 18rem;">
-            <a href="#" class="card-link-wrapper" data-key="centro-cultural-philus-haus">
-                <img src="assets/pontos-turisticos/centro-cultural-philus-haus.jpg" class="card-img-top" alt="centro-cultural-philus-haus">
-                <div class="card-body">
-                    <h3 class="card-title">Centro Cultural Philus-Haus</h3>
-                    <p class="card-text">Clique para saber mais!</p>
-                </div>
-            </a>
-        </div>
-
+        <h2 id="modal-title" class="modal-title"></h2>
+        <div id="modal-text" class="modal-text"></div>
       </div>
-    </section>
-  </main>
 
-  <!-- Modal -->  
-  <div id="modal-overlay" class="modal-overlay">
-
-    <!-- Conteúdo do Modal -->
-    <div id="modal-content" class="modal-content">
-
-      <div class="modal-image-container">
-        <img id="modal-image" src="" alt="Imagem do Ponto Turístico" class="modal-image">
-        
-        <button id="modal-prev" class="modal-arrow prev">&lt;</button>
-        <button id="modal-next" class="modal-arrow next">&gt;</button>
-      </div>
-      
-      <h2 id="modal-title" class="modal-title"></h2>
-      <div id="modal-text" class="modal-text"></div>
+      <!-- Fechar Modal -->
+      <button id="modal-close" class="modal-close">&times;</button>
     </div>
-
-    <!-- Fechar Modal -->
-    <button id="modal-close" class="modal-close">&times;</button>
-
-  </div>
-  <main-footer></main-footer>
-</body>
-
+    <main-footer></main-footer>
+  </body>
 </html>
+
