--- a/restaurantes-e-pousadas.html
+++ b/restaurantes-e-pousadas.html
@@ -44,10 +44,10 @@
       </div>
 
       <!-- Cards -->
-      <div class="cards">
+      <div class="cards container">
 
         <!-- Card 1 (Pousada Nossa Senhora da Guia ) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <a href="#" class="card-link-wrapper" data-key="pousada-nossa-senhora-da-guia">
                 <img src="assets/restaurantes-e-pousadas/pousada-nossa-senhora-da-guia-1.jpg" class="card-img-top" alt="pousada-nossa-senhora-da-guia">
                 <div class="card-body">
@@ -58,7 +58,7 @@
         </div>
 
         <!-- Card 2 (Recanto das Pedras) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card">
             <a href="#" class="card-link-wrapper" data-key="recanto-das-pedras">
                 <img src="assets/restaurantes-e-pousadas/recanto-das-pedras-1.png"" class="card-img-top" alt="recanto-das-pedras">
                 <div class="card-body">
@@ -69,7 +69,7 @@
         </div>
 
         <!-- Card 3 (Pousada e Restaurante Da Paz) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
             <a href="#" class="card-link-wrapper" data-key="pousada-e-restaurante-da-paz">
                 <img src="assets/restaurantes-e-pousadas/pousada-e-restaurante-da-paz-2.png"" class="card-img-top" alt="pousada-e-restaurante-da-paz">
                 <div class="card-body">
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Card 4 (Tapioca do Irmão Jairo) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
             <a href="#" class="card-link-wrapper" data-key="tapioca-do-irmao-jairo">
                 <img src="assets/restaurantes-e-pousadas/tapioca-do-irmao-jairo-1.jpg" class="card-img-top" alt="tapioca-do-irmao-jairo">
                 <div class="card-body">
@@ -91,7 +91,7 @@
         </div>
 
         <!-- Card 5 (Rekints Restaurante E Churrascaria) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
             <a href="#" class="card-link-wrapper" data-key="rekints-restaurante-e-churrascaria">
                 <img src="assets/restaurantes-e-pousadas/rekints-restaurante-e-churrascaria.png" class="card-img-top" alt="rekints-restaurante-e-churrascaria">
                 <div class="card-body">
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Card 6 (Sushi-Lom) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
             <a href="#" class="card-link-wrapper" data-key="sushi-lom">
                 <img src="assets/restaurantes-e-pousadas/sushi-lom.jpg" class="card-img-top" alt="Sushi-Lom">
                 <div class="card-body">
@@ -113,7 +113,7 @@
         </div>
 
         <!-- Card 7 (Restaurante Sabor Nordestino) -->
-        <div class="card" style="width: 18rem;">
+        <div class="card" >
             <a href="#" class="card-link-wrapper" data-key="restaurante-sabor-nordestino">
                 <img src="assets/restaurantes-e-pousadas/restaurante-sabor-nordestino.jpg" class="card-img-top" alt="restaurante-sabor-nordestino">
                 <div class="card-body">
